/*
 * $Id: ChangeLog,v 1.2954 2004/05/18 16:19:52 srobert Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-18 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/vm/arrays.c
    ! Fix hb_arraydel() deleting array with len 1.
      Revert change version 1.59

2004-05-18 12:11 UTC-0400 Sylvain Robert <s.robert/at/videotron.ca>
  * contrib/hbzlib/zipnew.cpp
      * hb_CheckSpanMode() was giving a GPF if the ZIP file was read only
        and the program was called from a batch file (under windows)
        User must use SETZIPREADONLY() before HB_UNZIPFILE() when the ZIP
        file is RO or on a RO media

2004-05-18 08:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/thread.c
  * source/vm/hvm.c
    + Added logic to free Sequence management linked list when app/thread terminates.

2004-05-18 11:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * contrib/hbzlib/zip.c
    ! fixed some warnings under linux

2004-05-18 14:10 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rtl/gtwvt/Makefile
    * added wvtcore.c and wvtutils.c

2004-05-18 12:10 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * source/rdd/dbcmd.c
    ! Fixed hb_strescape

2004-05-17 23:23 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed Blockify to NOT process an already CodeBlock <exp>.

    /*
       Clipper does NOT Blockify list of <exp,...> if FIRST exp is a CodeBlock.
       I believe this is a BUG, but the situation itslef is very odd, and this may
       very well have been a known issue that was not worth addressing. So I did not
       address it either.
    */

2004-05-17 23:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * source/rtl/teditor.prg
     * replaced ReadInsert with SET( _SET_INSERT ) to avoid "implicit"
       inclusion of getsys.prg.
